--- a/web/WEB.html
+++ b/web/WEB.html
@@ -6,43 +6,51 @@
     <title>Rebel Clothing - Rompiendo Esquemas</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
+            font-family: 'Arial', sans-serif;
+            background-color: #000;
             color: #fff;
-            text-align: center;
             margin: 0;
+            padding: 0;
+            text-align: center;
         }
         .navbar {
-            background-color: #222;
-            padding: 15px;
-            text-align: center;
-        }
-        .navbar a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            margin: 5px;
-            font-weight: bold;
-            display: inline-block;
-        }
-        .hero {
-            background-image: url('https://via.placeholder.com/1600x800');
-            background-size: cover;
-            height: 400px;
             display: flex;
             justify-content: center;
+            background-color: #111;
+            padding: 15px;
+        }
+        .navbar a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 15px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+        .navbar a:hover {
+            color: #aaa;
+        }
+        .hero {
+            background: url('https://via.placeholder.com/1600x800') no-repeat center center/cover;
+            height: 400px;
+            display: flex;
             align-items: center;
+            justify-content: center;
+            text-align: center;
         }
         .hero h1 {
-            background: rgba(0, 0, 0, 0.6);
+            font-size: 2.5rem;
+            background: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            border-radius: 8px;
+            border-radius: 5px;
         }
         .section {
-            padding: 40px 20px;
+            padding: 60px 20px;
+            max-width: 800px;
+            margin: auto;
+            text-align: left;
         }
         .footer {
-            background-color: #222;
+            background-color: #111;
             padding: 15px;
             font-size: 14px;
         }
@@ -51,39 +59,39 @@
 <body>
 
 <!-- Navbar -->
-<div class="navbar">
+<nav class="navbar">
     <a href="#about">Nosotros</a>
     <a href="#collection">Colección</a>
     <a href="#contact">Contacto</a>
-</div>
+</nav>
 
 <!-- Hero -->
-<div class="hero">
+<header class="hero">
     <h1>Rompiendo Esquemas</h1>
-</div>
+</header>
 
 <!-- About Section -->
-<div class="section" id="about">
+<section class="section" id="about">
     <h2>Nosotros</h2>
-    <p>En <strong>Rebel Clothing</strong>, diseñamos moda para quienes desafían lo convencional. Expresa tu estilo sin límites.</p>
-</div>
+    <p><strong>Rebel Clothing</strong> es moda para quienes desafían lo convencional. Expresa tu estilo sin límites.</p>
+</section>
 
 <!-- Collection Section -->
-<div class="section" id="collection">
+<section class="section" id="collection">
     <h2>Nuestra Colección</h2>
     <p>Diseños exclusivos para quienes marcan la diferencia.</p>
-</div>
+</section>
 
 <!-- Contact Section -->
-<div class="section" id="contact">
+<section class="section" id="contact">
     <h2>Contacto</h2>
-    <p>Ubicación: Avenida Reina Victoria, Cartagena Murcia, España</p>
-</div>
+    <p>Ubicación: Avenida Reina Victoria, Cartagena, Murcia, España</p>
+</section>
 
 <!-- Footer -->
-<div class="footer">
+<footer class="footer">
     <p>© 2025 Rebel Clothing - Todos los derechos reservados.</p>
-</div>
+</footer>
 
 </body>
 </html>
